- 04-26-04: Memory Leaks fixes in early Exits in CalcAI routine. [ChrstphrR]
- 04-25-04: Fixed Chain Combo Timing issue with cast failure upon new Triple Attack. [AlexKreuz]
- 04-24-04: Added .ini option for monster skills.  [Darkhelmet]
- 04-24-04: Numerous AI fixes, crashes should stop.  [Darkhelmet]
- 04-24-04: Rolled back Darkhelmets changes about Monster skills. Crashed the server.    [Eliot]
- 04-24-04: Some Memory Leaks in Map and substructures fixed. [ChrstphrR]
- 04-24-04: Removed buf2 - unused static variable 32k in size. [ChrstphrR]
- 04-24-04: Got back old Water Ball routines, because new way of doing that didnt work [Eliot]
- 04-24-04: Soul Strike cast delay changed [Eliot]
- 04-24-04: LOV and Storm Gust calculations fixed again [Eliot]
- 04-24-04: AI enabled, most Monster statuses tracked now. *Experimental [Darkhelmet]
- 04-24-04: Memory Leaks in global list quick-fixed. [ChrstphrR]
- 04-22-04: Mapload bugfix, & Script errors show proper line number [ChrstphrR]
- 04-20-04: Small memory leaks plugged in map load routines. [ChrstphrR]
- 04-20-04: Dead Branch summon monster code improvments. [ChrstphrR]
- 04-19-04: Quick Fix for Kyuubi's fix -- please check and adjust if 
I made the wrong assumption :) [ChrstphrR]
- 04-08-04: Fixed failure to check for a guild that caused Range Error. [KyuubiKitsune]
- 04-16-04: Fixed Bug 139 - Intimidate Skill warped MVP Monsters. [AlexKreuz]
- 04-16-04: Fixed Bug 193 - Auto Berkserk Skill not increasing damage. [AlexKreuz]
- 04-16-04: Fixed Bug 710 - No skill points for novice with #jlevel. [AlexKreuz]
- 04-16-04: Added 'addstatpoints' script command. [AlexKreuz]
- 04-16-04: Added 'addskillpoints' script command. [AlexKreuz]
- 04-15-04: Updated Water Ball PvM to use new DOT procedure. [Colus]
- 04-15-04: Added DamageOverTime function (in testing phase). [Colus]
- 04-15-04: Added eventmob NPC Command. 
		-Syntax: eventmob [JID],[Name],[X Position],[YPosition],[Perfect Drop ID(0 = None)].  [Darkhelmet]